--- a/.gitignore
+++ b/.gitignore
@@ -618,3 +618,6 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,venv,visualstudio,python
+
+# db_settings
+db_settings.py
