--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -1,9 +1,9 @@
 asgiref==3.8.1
-Django==5.0.7
+Django==4.2.14
 django-cors-headers==4.4.0
-django-filter==24.2
 djangorestframework==3.15.2
-Markdown==3.6
+mysqlclient==2.2.4
 pillow==10.4.0
+PyMySQL==1.1.1
 sqlparse==0.5.1
 typing_extensions==4.12.2
